--- a/TabCenterReborn-insideConfig.css
+++ b/TabCenterReborn-insideConfig.css
@@ -1,9 +1,9 @@
 :root {
     --tab-separator: transparent;
+    --tab-selected-line: transparent;
     --tablist-separator: #cccccc;
     --overflow-indicator-border: #333333;
 }
-
 @media (prefers-color-scheme: dark) {
     :root {
         --background: #1c1b22;
@@ -28,7 +28,7 @@
 }
 @media (prefers-color-scheme: light) {
     :root {
-        --lwt-frame-personal:  #e9e6ef;
+        --lwt-frame-personal:  #ffffff;
         --toolbar-bgcolor: #ffffff;
     }
 }
@@ -38,14 +38,16 @@
 body {
     overflow: hidden;
     background-color: var(--toolbar-bgcolor);
-    /*background-color: color-mix(in srgb, var(--background) 86%, var(--input-selected-text)) ;*/
+    /*background-color:var(--tab-active-background);*/
 }
+
 /* Move topmenu to bottom */
 #topmenu {
     order: 2;
     background: transparent;
     border: none;
 }
+
 #newtab {
     margin-left: 6px;
 }
@@ -53,6 +55,7 @@ body {
 #settings {
     margin-right: 2px;
 }
+
 /* Hide filterbox & settings icon */
 #filterbox-icon,
 #filterbox-input,
@@ -66,16 +69,16 @@ body {
     /* adds margin above tabs to make the spacing even */
     margin-top: 5px;
 }
+
 /* fix glitch with spacing in-between pinned tabs */
 #pinnedtablist:not(.compact) {
     display: flex;
     flex-direction: column;
 }
+
 #tablist-wrapper::after {
     content: "";
     margin: 2px 0;
-    border: 1px solid var(--tab-loading-fill);
-    border-bottom-width: 0px;
 }
 
 #newtab {
@@ -85,44 +88,28 @@ body {
     padding-left: 9px;
     min-width: 36px;
     width: 100%;
-
-}
-
-.tab,
-.tab.active {
-background-color: var(identity-color, var(--tab-loading-fill));
-    border-bottom: none !important;
-    margin: 1px 0;
-}
-/* Change the line of selected tab to container color too */
-#pinnedtablist:not(.compact) .tab.active, #tablist .tab.active {
-    background-color: color-mix(in srgb,  var(--identity-color, var(--tab-loading-fill, var(--general-color))) 22%, transparent);
-    box-shadow: inset 3px 0 0 0px color-mix(in srgb, var(--identity-color,var(--tab-loading-fill)) 100%, transparent);
-    border-radius: 4px;
-}
-/* Change the line of selected tab to container color too in pinned tabs */
-#pinnedtablist:is(.compact) .tab.active {
-    background-color: color-mix(in srgb,  var(--identity-color, var(--tab-loading-fill, var(--general-color))) 22%, transparent);
-    box-shadow: inset 0 3px 0 0px color-mix(in srgb, var(--identity-color,var(--tab-loading-fill)) 100%, transparent);
-    border-radius: 4px;
-    border-radius: 4px;
-}
-#pinnedtablist.compact:not(:empty) {
-    border-color: color-mix(in srgb, var(--identity-color,var(--tab-loading-fill)) 30%, transparent);
-}
-.tab:not(.active):hover {
---prueba-variable: color-mix(in srgb,  var(--background) 80%, var(--input-text));
-    background-color: var(--prueba-variable);
-    border-radius: 4px;
 }
 
 #pinnedtablist:not(.compact) .tab,
 #tablist .tab {
     padding: 0;
+    margin: 0;
+    /*border: 0 solid transparent;
+    background: transparent;*/
+}
+
+#pinnedtablist:not(.compact) .tab:before,
+#tablist .tab:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -6px;
+    width: 6px;
 }
 
 #newtab::after {
-    content: "New tab";
+    content: attr(title);
     margin-left: 10px;
     white-space: nowrap;
     overflow: hidden;
@@ -130,32 +117,6 @@ background-color: var(identity-color, var(--tab-loading-fill));
 
 #newtab-icon {
     min-width: 16px;
-}
-
-/* the @media rule only allows these settings apply when the sidebar is expanded */
-@media (min-width: 49px) {
-    /* Move close button to left side */
-    /*.tab-close {
-        left: 0;
-        margin-left: 3px;
-    }*/
-
-    /* Fix title gradient */
-    /*#tablist .tab:hover > .tab-title-wrapper {
-        mask-image: linear-gradient(to left, transparent 0, black 2em);
-    }*/
-
-    /* Move tab text to right when hovering to accomodate for the close button */
-    /*#tablist .tab:hover > .tab-title-wrapper {
-        margin-left: 28px;
-        transition: all 0.2s ease;
-    }*/
-
-    /* Move favicon to right when hovering to accomodate for the close button */
-    /*#tablist .tab:hover > .tab-meta-image {
-        padding-left: 25px;
-        transition: all 0.2s ease;
-    }*/
 }
 
 /*** Move container indicators to left ***/
@@ -183,7 +144,7 @@ background-color: var(identity-color, var(--tab-loading-fill));
     left: -6px;
     bottom: 6px;
     width: 3px;
-    border-radius:0 5px 5px 0;
+    border-radius: 0 5px 5px 0;
     background: var(--identity-color);
     transition: inset .1s;
 }
@@ -197,6 +158,7 @@ background-color: var(identity-color, var(--tab-loading-fill));
 #tablist-wrapper.shrinked>:not(#pinnedtablist.compact) .tab-meta-image {
     margin-left: 6px !important;
 }
+
 /* hide certain items when collapsed */
 @media (max-width: 64px) {
     /* using 64px minimum width to give the tab favicons more room during the transition */
@@ -205,8 +167,8 @@ background-color: var(identity-color, var(--tab-loading-fill));
         visibility: collapse !important;
     }
 
-/* hide scrollbar when sidebar is collapsed */
-#tablist {
+    /* hide scrollbar when sidebar is collapsed */
+    #tablist {
         scrollbar-width: none;
     }
 }
@@ -216,9 +178,10 @@ background-color: var(identity-color, var(--tab-loading-fill));
     #tablist-wrapper .tab-title-wrapper,
     #newtab::after,
     #settings {
-    visibility: hidden !important;
+        visibility: hidden !important;
     }
 }
+
 /* Use mask for overflow instead of shadows */
 .can-scroll-top #tablist {
     mask: linear-gradient(transparent, black 40px);
@@ -232,16 +195,17 @@ background-color: var(identity-color, var(--tab-loading-fill));
 #topshadow, #bottomshadow {
     display: none;
 }
+
 /* Prevent showing scrollbar when adding/removing tabs */
 #tablist-wrapper:not(.can-scroll-bottom):not(.can-scroll-top) #tablist {
     overflow: hidden;
 }
+
 /*** Prevent Favicon-only pinned tabs from wrapping ***/
 #pinnedtablist.compact {
     flex-wrap: nowrap;
     overflow-x: auto;
     gap: 2px;
-    background-color: var(--lwt-frame-personal);
 }
 #pinnedtablist.compact:not(:hover):not(:focus-within) { /* Prevent scrollbar from showing when transitioning */
     scrollbar-width: none;
@@ -253,16 +217,78 @@ background-color: var(identity-color, var(--tab-loading-fill));
     #pinnedtablist.compact {
         overflow-x: clip /* Clip always makes it reset scroll position */
     }
-#pinnedtablist.compact .tab.active {
+    #pinnedtablist.compact .tab.active {
         order: -1
     }
 }
+
+/* middle click newtab workaround */
+
+/* allows the #spacer element to take up more space */
+#spacer {
+    min-height: 100vh;
+}
+
+/* moves the new tab button to the original position */
+#tablist-wrapper {
+    margin-bottom: -100vh;
+}
+
+/* moves the new tab button separator to the original position */
+#tablist-wrapper::after {
+    transform: translateY(-100vh);
+}
+
 /* Change the radius of the close button */
 .tab-close{
-border-radius: 0 4px 4px 0;
+    border-radius: 0 4px 4px 0;
 }
-/* Sound icon */
-.tab-icon-overlay-audible, .tab-icon-overlay-muted {
+
+.tab.audible:not(.muted) .tab-icon-overlay-audible {
     box-shadow: none;
     border-width: 0px;
 }
+.tab.muted .tab-icon-overlay-muted{
+    opacity: 0;
+    background-color: transparent;
+    box-shadow: none;
+    border-width: 0px;
+}
+.tab.muted:hover .tab-icon-overlay-muted {
+    opacity: 1; 
+}
+.tab,
+.tab.active {
+background-color: var(identity-color, var(--tab-loading-fill));
+    border-bottom: none !important;
+    margin: 1px 0;
+}
+/* Change the line of selected tab to container color too */
+#pinnedtablist:not(.compact) .tab.active, #tablist .tab.active {
+    background-color: color-mix(in srgb,  var(--identity-color, var(--tab-loading-fill, var(--general-color))) 22%, transparent);
+    box-shadow: inset 3px 0 0 0px color-mix(in srgb, var(--identity-color,var(--tab-loading-fill)) 100%, transparent);
+    border-radius: 4px;
+}
+/* Change the line of selected tab to container color too in pinned tabs */
+#pinnedtablist:is(.compact) .tab.active {
+    background-color: color-mix(in srgb,  var(--identity-color, var(--tab-loading-fill, var(--general-color))) 22%, transparent);
+    box-shadow: inset 0 3px 0 0px color-mix(in srgb, var(--identity-color,var(--tab-loading-fill)) 100%, transparent);
+    border-radius: 4px;
+    border-radius: 4px;
+}
+#pinnedtablist.compact:not(:empty) {
+    border-color: #70707070;
+    margin-bottom: 2px;
+}
+#pinnedtablist.compact .tab{
+    margin-bottom: 2px;
+    margin-inline-end: -2px;
+}
+.tab:not(.active):hover, #newtab:hover {
+    --prueba-variable: color-mix(in srgb,  var(--toolbar-bgcolor) 90%, var(--input-text));
+    background-color: var(--prueba-variable);
+    border-radius: 4px;
+}
+#tablist-wrapper::after {border: 1px solid #70707070; border-bottom-width: 0px; }
+#pinnedtablist.compact { background-color: var(--lwt-frame-personal); }
+#newtab { margin-top: -4px; }
