--- a/chrome/components/one_contextual-menu.css
+++ b/chrome/components/one_contextual-menu.css
@@ -3,9 +3,14 @@
 
 /* Menú contextual */
 
+menupopup {
+    --panel-padding: 4px 0px !important;
+}
+
 menupopup > menuitem, menupopup > menu {
     appearance: none !important;
     padding-block: 0.4em !important;
+    border-radius: 0px !important;
 }
 
 /* Combo-box - Select Box more compact */
@@ -123,6 +128,7 @@ menupopup > menuitem:is([selected="true"]):hover:not([disabled="false"]) {
     justify-content: flex-start !important;
     -moz-box-pack: start !important;
     width: auto !important;
+    border-radius: 0px !important;
 }
 
 #context-navigation > menuitem[_moz-menuactive="true"]:not([disabled]) {
